﻿CHANGELOG 2.5 com_clm_ext ab 1.1.0
------------

Legend:
* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
% -> Performance Fix
- -> Removed
! -> Note

- - - - - 1.2.2 - [06-08-2014] - - - - - - - - - - - - - - - - - - - -
# Joomla 3.x Support
^ Code Bereinigung

- - - - - 1.2.1 - [18-04-2014] - - - - - - - - - - - - - - - - - - - -
^ Neues Submenue analog Hauptkomponente

- - - - - 1.2.0 - [26-03-2014] - - - - - - - - - - - - - - - - - - - -
+ Weiterung des Hervorhebens (Schlagworte, Farben, Schriften)

- - - - - 1.1.5 - [11-02-2014] - - - - - - - - - - - - - - - - - - - -
+ Quelle SJ NRW als Sonderfall eingebaut

- - - - - 1.1.4 - [08-05-2013] - - - - - - - - - - - - - - - - - - - -
# Code-Bereinigung

- - - - - 1.1.3 - [06-11-2012] - - - - - - - - - - - - - - - - - - - -
+ Obere Auswahlfelder in Umsetzung einbezogen
# Prüfung Externe URL
+ Hervorheben von Mannschaften/Vereinen

- - - - - 1.1.2 - [20-10-2012] - - - - - - - - - - - - - - - - - - - -
+ Einbau dieser changelog
^ Anpassung wegen Suchmaschinenfreundliche URLs JA auf gerufener Seite

- - - - - 1.1.1 - [19-09-2012] - - - - - - - - - - - - - - - - - - - -
+ Einbau dieser changelog-Datei
^ Zugriff auf CLM unter Joomla 1.5 und 2.5

