@@ -2,13 +2,13 @@
 <!DOCTYPE install SYSTEM "http://dev.joomla.org/xml/1.5/component-install.dtd">
 <extension type="component" version="1.6.0" method="upgrade">
 	<name>clm_ext</name>
-	<creationDate>06.08.2014</creationDate>
+	<creationDate>01.11.2015</creationDate>
 	<author>CLM Projekt</author>
 	<copyright>(C) Copyright 2009-2014 by CLM Project</copyright>
 	<license>GPL</license>
 	<authorEmail>fishpoke@fishpoke.de</authorEmail>
 	<authorUrl>www.chessleaguemanager.de</authorUrl>
-	<version>1.2.2</version>
+	<version>1.2.3</version>
 	<description>
 		<![CDATA[
 		 <h3>CLM Extern Komponente :</h3>
